# pypipeline

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: .buildinfo  CNAME  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/d01_overview/: overview.html
docs/d02_getting_started/: p01_installation.html  p02_minimal_example.html  p03_pipeline_basics.html  p04_cell_nesting.html  p05_scale_up_basics.html  p06_cell_parameters.html
docs/d03_advanced/: p01_architecture.html  p02_topology_determination.html  p03_pull_based_execution.html  p04_validation.html  p05_scalable_cells_revisited.html  p06_performance_tests.html
docs/d04_deep_learning/: p01_neural_network_training.html
docs/d05_pypipeline_serve/: p01_http_api_generation_basics.html
docs/source/: conf.py
docsrc/: Makefile
docsrc/source/: design_decisions.md
examples/: pypipeline_serve_example_1.py
examples/mnistclassification/: mnistclassification.ipynb
pypipeline/: __init__.py  exceptions.py  validation.py
pypipeline/cell/: __init__.py  acell.py  asinglecell.py  icell.py  icellobserver.py
pypipeline/cellio/: __init__.py  acellio.py  ainput.py  aoutput.py  icellio.py
pypipeline/connection/: __init__.py  connection.py  iconnection.py
pypipeline_lib/: __init__.py
pypipeline_lib/torch/: __init__.py  data.py  dataloadersourcecell.py
pypipeline_serve/: fastapiserver.py
pypipeline_serve/endpoints/: __init__.py  aendpointfactory.py  deploymentendpointsfactory.py  descriptionendpointsfactory.py  (+2 more)
requirements/: docs.txt  ray.txt  serve.txt  tests.txt
(+92 files in other folders)
