[metadata]
description-file = README.md

[tool:pytest]

python_files =
    test_*.py
addopts =
    --strict-markers
    --color=yes
markers =
    slow
asyncio_mode =
    strict

;log_cli = 1
;log_cli_level = DEBUG
;log_cli_format = %(asctime)s.%(msecs)03d [%(threadName)10s] [%(name)10s] [%(levelname)s] %(message)s
;log_cli_date_format = %H:%M:%S

[coverage:run]
source = pypipeline

[coverage:report]
exclude_lines =
    pragma: no-cover
    warnings
    pass
    rank_zero_warn
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    */__init__.py

[mypy]
python_version = 3.7
files = pypipeline/**/*.py, pypipeline_lib/**/*.py, pypipeline_serve/**/*.py
mypy_path = pypipeline/, pypipeline_lib/, pypipeline_serve/
namespace_packages = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
disallow_untyped_defs = True

[mypy-setuptools]
ignore_missing_imports = True
[mypy-pytorch_lightning.*]
ignore_missing_imports = True
[mypy-torchvision.*]
ignore_missing_imports = True
[mypy-threading]
ignore_missing_imports = True
[mypy-ray]
ignore_missing_imports = True
[mypy-_collections]
ignore_missing_imports = True
[mypy-numpy]
ignore_missing_imports = True
[mypy-sklearn.*]
ignore_missing_imports = True
[mypy-cv2.*]
ignore_missing_imports = True
[mypy-PIL.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-tests.*]
# Ignore errors from the tests package, as we purposefully test for situations with invalid input.
ignore_errors = True
